public static class PlayerAnimationConstants{
    public const string JumpMultiplier = "JumpMultiplier";
    public const string IsJumping = "IsJumping";
    public const string IsRolling = "IsRolling";
    public const string StartGameTrigger = "StartGameTrigger";
    public const string Die = "Die";
    public const string RollSpeedMultiplier = "RollMultiplier";
}
